# bz_downloader

./: Cargo.toml
src/: app_state.rs  bz_downloader.rs  bz_task.rs  error.rs  m3u8.rs  main.rs  tray.rs  view.rs  zfs.rs
src/bz_task/: id.rs  info.rs  message.rs  mod.rs  task.rs
