[package]
name = "bz_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
async-std = "1.13.0"
env_logger = "0.11.7"
log = "0.4.26"
tray-icon = "0.20.0"
serde = "1.0.219"
serde_json = "1.0.140"
reqwest = { version = "0.12.12" }
m3u8-rs = "6.0.0"
tokio = { version = "1.44.0", features = ["full"] }
